--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,7 +63,7 @@
     <servlet-class>com.sun.jersey.spi.spring.container.servlet.SpringServlet</servlet-class>
     <init-param>
       <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>es.uji.commons.rest; com.fasterxml.jackson.jaxrs.json; es.uji.apps.hor.services</param-value>
+      <param-value>es.uji.commons.rest; com.fasterxml.jackson.jaxrs.json; es.uji.apps.hor.services.rest</param-value>
     </init-param>
     <init-param>
       <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
