UTF-8 para el codigo
git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@8619 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>uji-hor-base</name>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>es.uji.commons</groupId>
