--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <dependency>
       <groupId>es.uji.commons</groupId>
       <artifactId>uji-commons-testing</artifactId>
-      <version>0.0.3-SNAPSHOT</version>
+      <version>0.0.3</version>
     </dependency>
 
     <!-- Logging -->
