--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>es.uji.apps.hor</groupId>
   <artifactId>uji-hor-base</artifactId>
   <packaging>war</packaging>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <name>uji-hor-base</name>
 
   <properties>
@@ -33,8 +33,8 @@
   </dependencies>
 
   <scm>
-    <connection>scm:svn:https://universitatjaumei.jira.com/svn/HOR/uji-hor-base/tags/uji-hor-base_0.0.1</connection>
-    <url>https://universitatjaumei.jira.com/svn/HOR/uji-hor-base/tags/uji-hor-base_0.0.1</url>
+    <connection>scm:svn:https://universitatjaumei.jira.com/svn/HOR/uji-hor-base/trunk</connection>
+    <url>https://universitatjaumei.jira.com/svn/HOR/uji-hor-base/trunk</url>
   </scm>
 
   <distributionManagement>
