--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
   </dependencies>
 
   <scm>
-    <connection>scm:svn:https://universitatjaumei.jira.com/svn/HOR/uji-hor-base/trunk</connection>
-    <url>https://universitatjaumei.jira.com/svn/HOR/uji-hor-base/trunk</url>
+    <connection>scm:svn:http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk</connection>
+    <url>http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk</url>
   </scm>
 
   <distributionManagement>
