--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>es.uji.apps.hor</groupId>
 	<artifactId>uji-hor-base</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.5</version>
+	<version>0.0.6-SNAPSHOT</version>
 	<name>uji-hor-base</name>
 
 	<properties>
@@ -44,8 +44,8 @@
 
 
 	<scm>
-		<connection>scm:svn:http://jira.uji.es/repos/uji/HOR/uji-hor-base/tags/uji-hor-base_0.0.5</connection>
-		<url>http://jira.uji.es/repos/uji/HOR/uji-hor-base/tags/uji-hor-base_0.0.5</url>
+		<connection>scm:svn:http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk</connection>
+		<url>http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk</url>
 	</scm>
 
 	<distributionManagement>
