--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>es.uji.commons</groupId>
       <artifactId>uji-commons-testing</artifactId>
-      <version>0.0.5</version>
+      <version>0.1.0-SNAPSHOT</version>
       <!-- exclusions>
         <exclusion>
           <groupId>org.hamcrest</groupId>
