--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -7,6 +7,6 @@ log4j.appender.stdout.layout.ConversionPattern=%d %-5p %c - %m%n
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d %-5p %c - %m%n
-log4j.appender.R.File=${uji-hor-base.root}/WEB-INF/uji-hor-base.log
+log4j.appender.R.File=/tmp/uji-hor-base.log
 log4j.appender.R.MaxFileSize=10000KB
 log4j.appender.R.MaxBackupIndex=2
