--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,18 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>3.1.0.RELEASE</version>
+    </dependency>
+
     <!-- Logging -->
 
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.6.1</version>
+      <version>1.6.1</version>  
     </dependency>
 
     <dependency>
