--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
       <groupId>es.uji.commons</groupId>
       <artifactId>uji-commons-testing</artifactId>
       <version>0.1.0</version>
+      <!-- exclusions>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-library</artifactId>
+        </exclusion>
+      </exclusions-->
     </dependency>
 
     <dependency>
