IN PROGRESS HOR-291 Al entrar en la aplicación mostrar un dashboard con información del usuario (nombre y rol) y de la versión de la aplicación http://jira.uji.es/browse/HOR-291
git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@13092 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>es.uji.commons</groupId>
       <artifactId>uji-commons-testing</artifactId>
-      <version>0.1.0</version>
+      <version>0.1.1-SNAPSHOT</version>
       <!-- exclusions>
         <exclusion>
           <groupId>org.hamcrest</groupId>
@@ -104,7 +104,7 @@
         </includes>
         <filtering>true</filtering>
         <targetPath>..</targetPath>
-      </resource>
+      </resource>       
     </resources>
 
     <plugins>
