--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,10 @@
   <filter>
     <filter-name>authentication-filter</filter-name>
     <filter-class>es.uji.commons.sso.AuthFilter</filter-class>
+     <init-param>
+      <param-name>defaultActiveSession</param-name>
+      <param-value>${uji.deploy.defaultActiveSession}</param-value>
+    </init-param>
     <init-param>
       <param-name>goto</param-name>
       <param-value>${uji.deploy.goto}</param-value>
@@ -57,7 +61,7 @@
     <init-param>
       <param-name>defaultUserName</param-name>
       <param-value>${uji.deploy.defaultUserName}</param-value>
-    </init-param>
+    </init-param>    
   </filter>
 
   <filter-mapping>
