Actualizado proyecto para funcionar con la nueva estructura de uji-commons-rest
git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@13351 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,14 @@
   <dependencies>
     <dependency>
       <groupId>es.uji.commons</groupId>
+      <artifactId>uji-commons-rest</artifactId>
+      <version>0.1.11-SNAPSHOT</version>
+    </dependency>
+      
+    <dependency>
+      <groupId>es.uji.commons</groupId>
       <artifactId>uji-commons-testing</artifactId>
-      <version>0.1.1</version>
+      <version>0.1.2-SNAPSHOT</version>
       <!-- exclusions>
         <exclusion>
           <groupId>org.hamcrest</groupId>
