--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
     <dependency>
       <groupId>es.uji.commons</groupId>
       <artifactId>uji-commons-rest</artifactId>
-      <version>0.1.11-SNAPSHOT</version>
+      <version>0.1.11</version>
     </dependency>
-      
+
     <dependency>
       <groupId>es.uji.commons</groupId>
       <artifactId>uji-commons-testing</artifactId>
