--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>es.uji.commons</groupId>
       <artifactId>uji-commons-testing</artifactId>
-      <version>0.1.2-SNAPSHOT</version>
+      <version>0.1.2</version>
       <!-- exclusions>
         <exclusion>
           <groupId>org.hamcrest</groupId>
